--- a/.gitignore
+++ b/.gitignore
@@ -7,23 +7,5 @@ package-lock.json
 node_modules/
 dist/
 coverage/
-*.log
-*.swp
-*.swo
-*.swn
-*.swnb
-*.swp
-*.swpo
-*.swpx
-*.swt
-*.swx
-*.sw?
-*.sw?
-*.sw?
-*.sw?
-*.sw?
-*.sw?
-*.sw?
-*.sw?
-*.sw?
-*.sw?
+sync-db.js
+request.rest
