--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "module-alias": "^2.2.3",
     "multer": "^2.0.0",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.11",
     "path": "^0.12.7",
     "sanitize-html": "^2.17.0",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "child_process": "^1.0.2",
