--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "path": "^0.12.7",
     "sanitize-html": "^2.17.0",
     "sequelize": "^6.37.7",
+    "ua-parser-js": "^2.0.7",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
